--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.2.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3"
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^4.8.1"
-  }
+  "devDependencies": {}
 }
